Make ghost radios / checkboxes not show up anymore (bug 134560), r=bryner@netscape.com, sr=jst@netscape.com, a=asa